# typed-sigaa-schedule

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
class/: Cargo.toml
class/src/: auxiliary.rs  implementation.rs  lib.rs
docs/: index.html  output-c575332f8ecb892f.css  view-yew-291e1d0febeb1493.js  view-yew-291e1d0febeb1493_bg.wasm  view-yew-5488f2a630fd2148_bg.wasm  view-yew-9a7ce655ed5e47ea_bg.wasm
schedule/: Cargo.toml
schedule/src/: lib.rs  schedule.rs  schedule_unity.rs
schedule/tests/: schedule_tests.rs
src/: lib.rs  schedule.rs
src/disciplina/: auxiliary.rs  implementation.rs  mod.rs
src/sigaa/: dia.rs  disciplina.rs  horario.rs  mod.rs  schedule.rs  sigaa_time.rs  turno.rs
src/sigaa/disciplina/: auxiliary.rs  implementation.rs  mod.rs
src/sigaa/time/: dia.rs  horario.rs  mod.rs  sigaa_time.rs  turno.rs
src/time/: dia.rs  sigaa_time.rs  turno.rs
stf/: Cargo.toml
stf/src/: dia.rs  lib.rs  sigaa_time.rs
tests/: disciplina.rs  schedule.rs
view-yew/: Cargo.toml  index.html  tailwind.config.js
view-yew/src/: main.rs
view-yew/src/atoms/: discipline.rs  github_link.rs  mod.rs  schedule_unity.rs  text_input.rs  total_hour.rs
view-yew/src/molecules/: app.rs  discipline_list.rs  form.rs  mod.rs  schedule.rs
