[package]
name = "view-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
schedule = {path = "../schedule/"}
stf = { path = "../stf/" }
class = { path = "../class/" }
yew-autoprops = "0.4.1"
gloo-storage = "0.3.0"
gloo = "0.11.0"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
